# deepdetect

./: CMakeLists.txt
main/: CMakeLists.txt  dede.cc
src/: CMakeLists.txt  deepdetect.cc  mlservice.h  supervisedoutputconnector.h
src/backends/ncnn/: ncnninputconns.h
src/utils/: fileops.hpp  httpclient.hpp
tests/: CMakeLists.txt
